Fix statusIcon too large. Closes #6228.

--- a/src/webui/www/public/css/dynamicTable.css
+++ b/src/webui/www/public/css/dynamicTable.css
@@ -74,7 +74,8 @@
 }
 
 #transferList img.statusIcon {
-  margin-bottom: -4px;
+	height: 1.3em;
+	vertical-align: middle;
 }
 
 #trackers th,
